<resources>
    <string name="app_name">PICTURE IT</string>
    <string name="text_for_search">Text for search </string>
    <string name="search">search</string>
    <string name="user_name">user_name</string>
    <string name="history">History</string>
    <string name="picture">picture</string>
    <string name="delete_button">delete button</string>
    <string name="name_of_user">Name of user</string>
    <string name="login">Login</string>
    <string name="API_KEY_GOOGLE_MAP" translatable="false">AIzaSyA_Dhc4vkG3zjvP1EJgeghJEcAtUO1fvn8</string>
    <string name="favorite">Favorite</string>
    <string name="photo_on_map">Photo on map</string>
    <string name="gallery">Gallery</string>
    <string name="save_photo">Save</string>
    <string name="change_photo">Edit</string>
    <string name="ucrop_text_dialog">Edit photo with uCrop?</string>
    <string name="choose">Choose</string>
    <string name="pointer">pointer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="search_pictures">Search Pictures</string>
    <string name="night_mode">Night mode</string>
    <string name="settings">Settings</string>
    <string name="two_modes_more_perks">Two Modes - More Perks</string>
    <string name="close">CLOSE</string>
    <string name="meet_people_naround_you">Meet people around you</string>
    <string name="far">FAR</string>
    <string name="flirt_with_nanyone_widely">Flirt with  anyone widely</string>
    <string name="ok_got_it">Ok, got it</string>
    <string name="schedule_pictures">Schedule Pictures</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
