<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/search_pictures"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_pictures" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/history" />

        <item
            android:id="@+id/favorire_pick"
            android:icon="@drawable/ic_turned_in_black"
            android:title="@string/favorite" />

        <item
            android:id="@+id/find_on_map"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/photo_on_map" />

        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/gallery" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/scheduled_pictures"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedule_pictures" />

    </group>
</menu>